--- a/content/docs/(index)/index.mdx
+++ b/content/docs/(index)/index.mdx
@@ -1,20 +1,7 @@
 ---
-title: Welcome
-description: 'Explore Venoxity plugins built to expand and improve your GTA V gameplay with ease.'
-icon: Handshake
+title: Introduction
+description: This is a page to check fumadocs's OpenAPI example.
+icon: Book
 ---
 
-## Introduction
-
-Welcome to the Venoxity Development docs. Here you’ll find setup instructions, feature guides, and tips to get the most out of our **GTA V** plugins. Whether you’re installing for the first time or exploring advanced options, this site has you covered.
-
-## What is Venoxity Development?
-
-**Venoxity Development** creates plugins for **Grand Theft Auto V (GTA V)** focused on enhancing gameplay with smart design and useful features. Projects like **SimpleCTRL** and **SimpleHUD** integrate smoothly into the game while adding meaningful functionality. Our goal is to deliver reliable tools that make playing GTA V more engaging.
-
-### Jump right in
-
-<Cards>
-  <Card href="/quickstart" title="Quickstart">Learn how to install and start using Venoxity plugins.</Card>
-  <Card title="Coming Soon">No information available yet.</Card>
-</Cards>
+Welcome to the OpenAPI example! You can update the openapi in the 'openapi.yml' file.
