--- a/content/docs/api-reference/cbl-keybinds/functions/client.mdx
+++ b/content/docs/api-reference/cbl-keybinds/functions/client.mdx
@@ -1,7 +1,6 @@
 ---
-title: Introduction
-description: This is a page to check fumadocs's OpenAPI example.
-icon: Book
+title: Cilent
+icon: User
 ---
 
 Welcome to the OpenAPI example! You can update the openapi in the 'openapi.yml' file.
