--- a/content/docs/api-reference/cbl-keybinds/functions/client.mdx
+++ b/content/docs/api-reference/cbl-keybinds/functions/client.mdx
@@ -3,4 +3,20 @@ title: Cilent
 icon: User
 ---
 
-Welcome to the OpenAPI example! You can update the openapi in the 'openapi.yml' file.
+AddKeybind
+
+```ts tab="Tab 1"
+console.log('A');
+```
+
+```ts tab="Tab 2"
+console.log('B');
+```
+
+EnableKeys
+
+DisableKeys
+
+IsKeyDisabled
+
+GetKeyLabel
