--- a/content/docs/api-reference/cbl-keybinds/functions/client.mdx
+++ b/content/docs/api-reference/cbl-keybinds/functions/client.mdx
@@ -5,11 +5,13 @@ icon: User
 
 AddKeybind
 
-```ts tab="Tab 1"
-console.log('A');
+```ts tab="Lua"
+exports['cbl-keybinds']:AddKeybind('pointing', 'b', 'keyboard', 'Pointing - Toggle', function() 
+   print("pointing") 
+end)
 ```
 
-```ts tab="Tab 2"
+```ts tab="Javascript"
 console.log('B');
 ```
 
