--- a/content/docs/api-reference/cbl-keybinds/functions/client.mdx
+++ b/content/docs/api-reference/cbl-keybinds/functions/client.mdx
@@ -5,14 +5,10 @@ icon: User
 
 AddKeybind
 
-```ts tab="Lua"
+```lua tab="Lua"
 exports['cbl-keybinds']:AddKeybind('pointing', 'b', 'keyboard', 'Pointing - Toggle', function() 
    print("pointing") 
 end)
-```
-
-```ts tab="Javascript"
-console.log('B');
 ```
 
 EnableKeys
