--- a/content/docs/api-reference/cbl-keybinds/functions/client.mdx
+++ b/content/docs/api-reference/cbl-keybinds/functions/client.mdx
@@ -3,18 +3,10 @@ title: Cilent
 icon: User
 ---
 
-AddKeybind
+# AddKeybind
 
 ```lua tab="Lua"
 exports['cbl-keybinds']:AddKeybind('pointing', 'b', 'keyboard', 'Pointing - Toggle', function() 
    print("pointing") 
 end)
 ```
-
-EnableKeys
-
-DisableKeys
-
-IsKeyDisabled
-
-GetKeyLabel
