--- a/content/docs/api-reference/cbl-keybinds/functions/client.mdx
+++ b/content/docs/api-reference/cbl-keybinds/functions/client.mdx
@@ -10,3 +10,23 @@ exports['cbl-keybinds']:AddKeybind('pointing', 'b', 'keyboard', 'Pointing - Togg
    print("pointing") 
 end)
 ```
+
+## EnableKeys
+
+```lua tab="Lua"
+exports['cbl-keybinds']:AddKeybind('pointing', 'b', 'keyboard', 'Pointing - Toggle', function() 
+   print("pointing") 
+end)
+```
+
+# DisableKeys
+
+```lua tab="Lua"
+exports['cbl-keybinds']:AddKeybind('pointing', 'b', 'keyboard', 'Pointing - Toggle', function() 
+   print("pointing") 
+end)
+```
+
+IsKeyDisabled
+
+GetKeyLabel
