--- a/content/docs/api-reference/cbl-keybinds/functions/client.mdx
+++ b/content/docs/api-reference/cbl-keybinds/functions/client.mdx
@@ -5,28 +5,10 @@ icon: User
 
 ### AddKeybind
 
-```lua tab="Lua"
-exports['cbl-keybinds']:AddKeybind('pointing', 'b', 'keyboard', 'Pointing - Toggle', function() 
-   print("pointing") 
-end)
-```
+### EnableKeys
 
-## EnableKeys
+### DisableKeys
 
-```lua tab="Lua"
-exports['cbl-keybinds']:AddKeybind('pointing', 'b', 'keyboard', 'Pointing - Toggle', function() 
-   print("pointing") 
-end)
-```
+### IsKeyDisabled
 
-# DisableKeys
-
-```lua tab="Lua"
-exports['cbl-keybinds']:AddKeybind('pointing', 'b', 'keyboard', 'Pointing - Toggle', function() 
-   print("pointing") 
-end)
-```
-
-IsKeyDisabled
-
-GetKeyLabel
+### GetKeyLabel
