--- a/content/docs/api-reference/cbl-keybinds/functions/client.mdx
+++ b/content/docs/api-reference/cbl-keybinds/functions/client.mdx
@@ -1,6 +1,6 @@
 ---
 title: Cilent
-description: Here is a list of some of the functions that you can use specifically in __client__ side scripts.
+description: Here is a list of some of the functions that you can use specifically in client side scripts.
 ---
 
 ### AddKeybind
