--- a/content/docs/api-reference/cbl-blips/functions/client.mdx
+++ b/content/docs/api-reference/cbl-blips/functions/client.mdx
@@ -5,8 +5,40 @@ description: Here is a list of some of the functions that you can use specifical
 
 ### AddBlip
 
+```lua title="Lua"
+print('Hello World');
+```
+
+```js title="JavaScript"
+console.log('Hello World');
+```
+
 ### RemoveBlip
+
+```lua title="Lua"
+print('Hello World');
+```
+
+```js title="JavaScript"
+console.log('Hello World');
+```
 
 ### RemoveAllBlips
 
+```lua title="Lua"
+print('Hello World');
+```
+
+```js title="JavaScript"
+console.log('Hello World');
+```
+
 ### SetBlipWaypoint
+
+```lua title="Lua"
+print('Hello World');
+```
+
+```js title="JavaScript"
+console.log('Hello World');
+```
