Update code examples in client.mdx

--- a/content/docs/api-reference/cbl-blips/functions/client.mdx
+++ b/content/docs/api-reference/cbl-blips/functions/client.mdx
@@ -5,40 +5,40 @@ description: Here is a list of some of the functions that you can use specifical
 
 ### AddBlip
 
-```lua title="Lua"
-print('Hello World');
+```lua tab="Lua"
+print('A');
 ```
 
-```js title="JavaScript"
-console.log('Hello World');
+```js tab="JavaScript"
+console.log('B');
 ```
 
 ### RemoveBlip
 
-```lua title="Lua"
-print('Hello World');
+```lua tab="Lua"
+print('A');
 ```
 
-```js title="JavaScript"
-console.log('Hello World');
+```js tab="JavaScript"
+console.log('B');
 ```
 
 ### RemoveAllBlips
 
-```lua title="Lua"
-print('Hello World');
+```lua tab="Lua"
+print('A');
 ```
 
-```js title="JavaScript"
-console.log('Hello World');
+```js tab="JavaScript"
+console.log('B');
 ```
 
 ### SetBlipWaypoint
 
-```lua title="Lua"
-print('Hello World');
+```lua tab="Lua"
+print('A');
 ```
 
-```js title="JavaScript"
-console.log('Hello World');
+```js tab="JavaScript"
+console.log('B');
 ```
