--- a/content/docs/api-reference/cbl-blips/functions/client.mdx
+++ b/content/docs/api-reference/cbl-blips/functions/client.mdx
@@ -13,6 +13,10 @@ print('A');
 console.log('B');
 ```
 
+```csharp tab="C#"
+console.writeline('C');
+```
+
 ### RemoveBlip
 
 ```lua tab="Lua"
@@ -21,6 +25,10 @@ print('A');
 
 ```js tab="JavaScript"
 console.log('B');
+```
+
+```csharp tab="C#"
+console.writeline('C');
 ```
 
 ### RemoveAllBlips
@@ -33,6 +41,10 @@ print('A');
 console.log('B');
 ```
 
+```csharp tab="C#"
+console.writeline('C');
+```
+
 ### SetBlipWaypoint
 
 ```lua tab="Lua"
@@ -41,4 +53,8 @@ print('A');
 
 ```js tab="JavaScript"
 console.log('B');
+```
+
+```csharp tab="C#"
+console.writeline('C');
 ```
