--- a/content/docs/api-reference/cbl-blips/functions/client.mdx
+++ b/content/docs/api-reference/cbl-blips/functions/client.mdx
@@ -5,56 +5,16 @@ description: Here is a list of some of the functions that you can use specifical
 
 ### AddBlip
 
-```lua tab="Lua"
-print('A');
-```
-
-```js tab="JavaScript"
-console.log('B');
-```
-
-```csharp tab="C#"
-console.writeline('C');
-```
-
 ### RemoveBlip
-
-```lua tab="Lua"
-print('A');
-```
-
-```js tab="JavaScript"
-console.log('B');
-```
-
-```csharp tab="C#"
-console.writeline('C');
-```
 
 ### RemoveAllBlips
 
 ```lua tab="Lua"
-print('A');
+exports["cbl-blips"]:RemoveAllBlips()
 ```
 
 ```js tab="JavaScript"
-console.log('B');
-```
-
-```csharp tab="C#"
-console.writeline('C');
+exports["cbl-blips"].RemoveAllBlips();
 ```
 
 ### SetBlipWaypoint
-
-```lua tab="Lua"
-print('A');
-```
-
-```js tab="JavaScript"
-console.log('B');
-```
-
-```csharp tab="C#"
-console.writeline('C');
-```
