--- a/content/docs/api-reference/cbl-blips/functions/client.mdx
+++ b/content/docs/api-reference/cbl-blips/functions/client.mdx
@@ -4,11 +4,20 @@ description: Here is a list of some of the functions that you can use specifical
 ---
 
 ### AddBlip
+* id 
+* name
+* coords
+* sprite
+* colour
+* scale
+* display 
+* category
+* flashes
 
 ### RemoveBlip
+* id 
 
 ### RemoveAllBlips
-
 ```lua tab="Lua"
 exports["cbl-blips"]:RemoveAllBlips()
 ```
@@ -18,3 +27,4 @@ exports["cbl-blips"].RemoveAllBlips();
 ```
 
 ### SetBlipWaypoint
+* id 
