--- a/content/docs/api-reference/cbl-blips/functions/client.mdx
+++ b/content/docs/api-reference/cbl-blips/functions/client.mdx
@@ -2,14 +2,5 @@
 title: Cilent
 ---
 
-import { TypeTable } from 'fumadocs-ui/components/type-table';
-
-<TypeTable
-  type={{
-    percentage: {
-      description: 'The percentage of scroll position to display the roll button',
-      type: 'number',
-      default: 0.2,
-    },
-  }}
-/>
+## AddBlip
+Adds a map blip with a name, position, icon, color, scale, display, category, and optional flashing, and tracks it for easy removal or waypoint setting.
