--- a/content/docs/api-reference/cbl-blips/functions/client.mdx
+++ b/content/docs/api-reference/cbl-blips/functions/client.mdx
@@ -1,6 +1,15 @@
 ---
-title: Cilent
+title: Client
 ---
 
 ## AddBlip
-Adds a map blip with a name, position, icon, color, scale, display, category, and optional flashing, and tracks it for easy removal or waypoint setting.
+Adds a blip to the map.
+
+**Parameters:**
+
+- `argName` (boolean): Does var things to var value in `CmdName`.  
+  - Only applies on days that end in "ays".
+- `argName` (string): Blah blah.  
+  - Super blah.
+
+**Returns:** `object`
